[project]
name = "python-websockets"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "thom", email = "thomblweed@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"python-websockets" = "python_websockets:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_websockets"]
